Final touch for phase 3